src/navigation/Router/styles.less
.router-container {
    position: relative;
    z-index: 0;

    .route-container {
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: 0;
        overflow: hidden;

        &:not(:last-child) {
            display: none;
        }

        .route-content {
            position: absolute;
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;
            z-index: 0;
        }

        .modals-container {
            width: 0;
            height: 0;

            >* {
                position: absolute;
                top: 0;
                right: 0;
                bottom: 0;
                left: 0;
                z-index: 1;
            }
        }
    }
}

